fixed overflow behaviour to allow focus on textarea in mobile

--- a/bot/static/css/style.css
+++ b/bot/static/css/style.css
@@ -17,7 +17,7 @@ body {
     background-image: linear-gradient(135deg, #79cd40, #0aa4ff);
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: hidden;
+    overflow: auto;
     margin: 0;
 }
 
